@@ -25,9 +25,6 @@ Be less verbose about extraneous info
 \fB-p\fR, \fB--pretend\fR
 Don't commit or fix anything; just show what would be done
 .TP
-\fB-i\fR, \fB--include-masked\fR
-Include masked packages in scans at category or tree level
-.TP
 \fB-x\fR, \fB--xmlparse\fR
 Forces the metadata.xml parse check to be carried out
 .TP
