@@ -2211,7 +2211,7 @@ class config(object):
 
 		return iuse_implicit
 
-	def getMaskAtom(self, cpv, metadata):
+	def _getMaskAtom(self, cpv, metadata):
 		"""
 		Take a package and return a matching package.mask atom, or None if no
 		such atom exists or it has been cancelled by package.unmask. PROVIDE
@@ -2240,7 +2240,7 @@ class config(object):
 				return x
 		return None
 
-	def getProfileMaskAtom(self, cpv, metadata):
+	def _getProfileMaskAtom(self, cpv, metadata):
 		"""
 		Take a package and return a matching profile atom, or None if no
 		such atom exists. Note that a profile atom may or may not have a "*"
@@ -2265,7 +2265,7 @@ class config(object):
 				return x
 		return None
 
-	def getMissingKeywords(self, cpv, metadata):
+	def _getMissingKeywords(self, cpv, metadata):
 		"""
 		Take a package and return a list of any KEYWORDS that the user may
 		may need to accept for the given package. If the KEYWORDS are empty
@@ -2342,7 +2342,7 @@ class config(object):
 			missing = mygroups
 		return missing
 
-	def getMissingLicenses(self, cpv, metadata):
+	def _getMissingLicenses(self, cpv, metadata):
 		"""
 		Take a LICENSE string and return a list any licenses that the user may
 		may need to accept for the given package.  The returned list will not
@@ -2369,9 +2369,9 @@ class config(object):
 		license_struct = portage.dep.use_reduce(
 			license_struct, uselist=metadata["USE"].split())
 		license_struct = portage.dep.dep_opconvert(license_struct)
-		return self._getMissingLicenses(license_struct, acceptable_licenses)
+		return self._getMaskedLicenses(license_struct, acceptable_licenses)
 
-	def _getMissingLicenses(self, license_struct, acceptable_licenses):
+	def _getMaskedLicenses(self, license_struct, acceptable_licenses):
 		if not license_struct:
 			return []
 		if license_struct[0] == "||":
@@ -2379,7 +2379,7 @@ class config(object):
 			for element in license_struct[1:]:
 				if isinstance(element, list):
 					if element:
-						ret.append(self._getMissingLicenses(
+						ret.append(self._getMaskedLicenses(
 							element, acceptable_licenses))
 						if not ret[-1]:
 							return []
@@ -2395,7 +2395,7 @@ class config(object):
 		for element in license_struct:
 			if isinstance(element, list):
 				if element:
-					ret.extend(self._getMissingLicenses(element,
+					ret.extend(self._getMaskedLicenses(element,
 						acceptable_licenses))
 			else:
 				if element not in acceptable_licenses:
@@ -4217,9 +4217,12 @@ def spawnebuild(mydo,actionmap,mysettings,debug,alwaysdep=0,logfile=None):
 				configure_opts_warn_re = re.compile(
 					r'^configure: WARNING: Unrecognized options: .*')
 				am_maintainer_mode_re = re.compile(r'.*/missing --run .*')
+				am_maintainer_mode_exclude_re = \
+					re.compile(r'.*/missing --run (autoheader|makeinfo)')
 				try:
 					for line in f:
-						if am_maintainer_mode_re.search(line) is not None:
+						if am_maintainer_mode_re.search(line) is not None and \
+							am_maintainer_mode_exclude_re.search(line) is None:
 							am_maintainer_mode.append(line.rstrip("\n"))
 						if configure_opts_warn_re.match(line) is not None:
 							configure_opts_warn.append(line.rstrip("\n"))
@@ -6398,11 +6401,11 @@ def getmaskingstatus(mycpv, settings=None, portdb=None):
 	rValue = []
 
 	# profile checking
-	if settings.getProfileMaskAtom(mycpv, metadata):
+	if settings._getProfileMaskAtom(mycpv, metadata):
 		rValue.append("profile")
 
 	# package.mask checking
-	if settings.getMaskAtom(mycpv, metadata):
+	if settings._getMaskAtom(mycpv, metadata):
 		rValue.append("package.mask")
 
 	# keywords checking
@@ -6467,7 +6470,7 @@ def getmaskingstatus(mycpv, settings=None, portdb=None):
 				break
 
 	try:
-		missing_licenses = settings.getMissingLicenses(mycpv, metadata)
+		missing_licenses = settings._getMissingLicenses(mycpv, metadata)
 		if missing_licenses:
 			allowed_tokens = set(["||", "(", ")"])
 			allowed_tokens.update(missing_licenses)
