@@ -19,10 +19,11 @@ class CommandOutputSetTestCase(TestCase):
 	def testCommand(self):
 		
 		input = set(test_cps)
-		command = find_binary("echo")
-		command += " -e "
+		command = find_binary("bash")
+		command += " -c '"
 		for a in input:
-		  command += "\"%s\n\"" % a
+		  command += " echo -e \"%s\" ; " % a
+		command += "'"
 		s = CommandOutputSet(command)
 		atoms = s.getAtoms()
 		self.assertEqual(atoms, input)
